--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <label for="badNote">Navets</label>
     </div>
     
-    <a href="/add_movie.html">
+    <a href="/films/add_movie.html">
     <button id="addMovieButton">Ajouter un Film</button>
     </a>
     
